fixed navbar to look better on mobile improved some background images

--- a/pubsongsite/assets/styles2.css
+++ b/pubsongsite/assets/styles2.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  /*padding: 0;*/
+  
+  padding: 0;
   box-sizing: border-box;
   color: white;
 }
@@ -11,8 +11,8 @@ body {
 }
 
 .page{
-  /*margin: 90px auto;*/
-  font: 1em "Trebuchet MS", Verdana, sans-serif;
+  
+  font: 75%/1.75em "Trebuchet MS", Verdana, sans-serif;
   color: white;
   width:100%;
   display: block;
@@ -34,51 +34,28 @@ header img {
   justify-content: space-around;
 
 }*/
-.navbar{
-  padding-top: 12em;
+
+.navbar {
+  background: none;
+  font-size: 2em;
+  display: flex;
 }
+
+.navbar-nav{
+  display:row;
+}
+
 nav a{
 
   padding-top: 3%;
   padding: .5em;
   color: #40b878;
+  
+}
+
+.song_list {
   font-size: 1.5em;
 }
-/* Style the navigation bar links */
-a {
-  text-decoration: none;
-  color: #b1925b;
-}
-/* unvisited link */
-a:link {
-
-}
-
-/* visited link */
-a:visited {
-
-}
-
-/* mouse over link */
-a:hover {
-   color: #FF7900;
-}
-
-/* selected link */
-a:active {
-   color: blue;
-}
-p {
-    font-size: 1.25em;
-}
-pre {
-    font-size: 1.25em;
-}
-
-/*.content {
-  text-align: justify;
-  padding: 10% 5% 10% 5%;
-}*/
 
 footer {
   display:flex;
@@ -107,23 +84,23 @@ footer {
     padding: 7% 10% 0 7%;
   }
   .page {
+
     font-size: .5em;
     background-image: url('full-pint2.png');
     background-size: 100%;
     background-repeat: no-repeat;
   }
-.column-three{
+  .column-three{
     margin:  3em;
     margin-top: 0;
   }
-.nav-item {
-    display:inline;
-  }
+  .navbar {
+  display:row;
 
 
 }
 
-/*-------------------------------------------------------------------------------------------------*/
+}
 /* Desktop Styles */
 @media only screen and (min-width: 420px) {
 
@@ -133,7 +110,10 @@ footer {
   header{
     margin-bottom: -88px;
   }
- 
+  nav {
+    flex-direction: column;
+
+  }
   .flex-columns{
 
     display:flex;
@@ -143,8 +123,8 @@ footer {
   }
 
   .column-one{
-    /*padding-top: 4em;*/
-    min-width: 130px;
+    padding-top: 4em;
+   
   }
   .column-two{
     background-image: url('pint-left.png');
@@ -155,7 +135,7 @@ footer {
   }
   .column-three{
     background-size: 100% 131px;
-    background-image: url('pubsongstext1.png'), url('pint_head.png');
+    background-image: url('pubsongstext.png'), url('pint_head.png');
     background-position: top;
     background-repeat: no-repeat;
     max-width: 40em;
@@ -172,27 +152,13 @@ footer {
   width: 150px;
 }
 
-  /* Style the navbar */
-  #navbar {
-    overflow: hidden;
-
-  }
-
-  /* Navbar links */
-  #navbar a {
-   
-    padding: 14px;
-    text-decoration: none;
-  }
+  
 
   .content{
     margin-top: 130px;
   }
-   .nav-item {
-    display:block;
-    margin-top: 2em;
-    margin-bottom: 2em;
-  }
+  
+}
 
 
 
